--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,7 +86,7 @@
 .rc-pagination-next button,
 .rc-pagination-total-text a,
 .rc-pagination-total-text button {
-    padding: 6px 8px;
+    padding: 10px 16px;
     height: auto;
     min-width: 32px;
     min-height: 32px;
@@ -126,4 +126,56 @@
 .rc-pagination-total-text button:hover {
     background-color: #eceff5;
     border-color: #eceff5;
+}
+
+/* check radio */
+
+[type='radio']:checked,
+[type='radio']:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+[type='radio']:checked + label,
+[type='radio']:not(:checked) + label {
+    position: relative;
+    padding-left: 28px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: black;
+}
+[type='radio']:checked + label:before,
+[type='radio']:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #1266dd;
+    border-radius: 100%;
+    background: #fff;
+}
+[type='radio']:checked + label:after,
+[type='radio']:not(:checked) + label:after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background: #1266dd;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+[type='radio']:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+[type='radio']:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
