--- a/client/src/index.css
+++ b/client/src/index.css
@@ -179,3 +179,34 @@
     -webkit-transform: scale(1);
     transform: scale(1);
 }
+
+/* form-select */
+.form-select,
+.form-input {
+    font-size: 14px;
+    appearance: none;
+    border-color: #e7e7ec;
+    border-width: 1px;
+    border-radius: 4px;
+    padding-top: 4px;
+    padding-right: 4px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    line-height: 1.5rem;
+    --tw-shadow: 0 0 #0000;
+}
+
+.form-input:focus,
+.form-select:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-color: #fff;
+    --tw-ring-color: #2563eb;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    border-color: #80bdff;
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+}
