--- a/client/src/index.css
+++ b/client/src/index.css
@@ -196,7 +196,8 @@
 }
 
 .form-input:focus,
-.form-select:focus {
+.form-select:focus,
+.textarea:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
     --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
