add Map in DetailPost

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -238,3 +238,16 @@ button.slick-prev::before {
     content: '\276E';
     font-size: 30px;
 }
+
+/* custom z-index leaflet */
+
+.leaflet-control {
+    z-index: 0 !important;
+}
+.leaflet-pane {
+    z-index: 0 !important;
+}
+.leaflet-top,
+.leaflet-bottom {
+    z-index: 0 !important;
+}
