--- a/client/src/index.css
+++ b/client/src/index.css
@@ -182,6 +182,7 @@
 
 /* form-select */
 .form-select,
+.form-textarea,
 .form-input {
     font-size: 14px;
     appearance: none;
@@ -197,7 +198,7 @@
 
 .form-input:focus,
 .form-select:focus,
-.textarea:focus {
+.form-textarea:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
     --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
